@@ -80,8 +80,6 @@ my $numberOfCPUs;
 my $baseProductDir;
 my @baseProductDirOption;
 my $configuration;
-my $xcodeSDK;
-my $xcodeSDKVersion;
 my $configurationForVisualStudio;
 my $configurationProductDir;
 my $sourceDir;
@@ -275,17 +273,6 @@ sub setBaseProductDir($)
 sub determineConfiguration
 {
     return if defined $configuration;
-
-    # Look for explicit setting first
-    for (my $i = 0; $i <= $#ARGV; $i++) {
-        my $opt = $ARGV[$i];
-        if ($opt =~ /^--config(uration)$/) {
-            splice(@ARGV, $i, 1);
-            $configuration = splice(@ARGV, $i, 1);
-            return;
-        }
-    }
-
     determineBaseProductDir();
     if (open CONFIGURATION, "$baseProductDir/Configuration") {
         $configuration = <CONFIGURATION>;
@@ -314,30 +301,6 @@ sub determineArchitecture
     $architecture = "";
 
     determineBaseProductDir();
-
-    # Look for explicit setting first
-    my @explicitArchs;
-    for (my $i = 0; $i <= $#ARGV; $i++) {
-        my $opt = $ARGV[$i];
-
-        if ($opt =~ /^--arch(itecture)?$/) {
-            splice(@ARGV, $i, 1);
-            push @explicitArchs, splice(@ARGV, $i--, 1);
-        } elsif ($opt =~ /^ARCHS=(.*)$/) {
-            push @explicitArchs, split(/\w/, $1);
-            splice(@ARGV, $i--, 1);
-        }
-    }
-
-    # Make explicit arch settings forgiving – remove duplicate settings
-    # and allow for specifying architectures with both --arch and appending
-    # Xcode-style ARCHS=(.*)
-    @explicitArchs = sort keys %{{ map { $_ => 1 } @explicitArchs }};
-
-    if (scalar(@explicitArchs)) {
-        $architecture = join(' ', @explicitArchs) if @explicitArchs;
-        return;
-    }
 
     if (isGtk()) {
         determineConfigurationProductDir();
@@ -420,7 +383,6 @@ sub argumentsForConfiguration()
     push(@args, '--debug') if $configuration eq "Debug";
     push(@args, '--release') if $configuration eq "Release";
     push(@args, '--32-bit') if $architecture ne "x86_64";
-    push(@args, '--sdk', $xcodeSDK) if defined $xcodeSDK;
     push(@args, '--qt') if isQt();
     push(@args, '--gtk') if isGtk();
     push(@args, '--efl') if isEfl();
@@ -432,33 +394,6 @@ sub argumentsForConfiguration()
     push(@args, '--chromium-android') if isChromiumAndroid();
     push(@args, '--inspector-frontend') if isInspectorFrontend();
     return @args;
-}
-
-sub determineXcodeSDK
-{
-    return if defined $xcodeSDK;
-    for (my $i = 0; $i <= $#ARGV; $i++) {
-        my $opt = $ARGV[$i];
-        if ($opt =~ /^--sdk$/i) {
-            splice(@ARGV, $i, 1);
-            $xcodeSDK = splice(@ARGV, $i, 1);
-        } elsif ($opt =~ /^--device$/i) {
-            splice(@ARGV, $i, 1);
-            $xcodeSDK = 'iphoneos.internal';
-        } elsif ($opt =~ /^--sim(ulator)?/i) {
-            splice(@ARGV, $i, 1);
-            $xcodeSDK = 'iphonesimulator';
-        }
-    }
-    $xcodeSDK ||= '/';
-
-    chomp $xcodeSDK;
-}
-
-sub xcodeSDK
-{
-    determineXcodeSDK();
-    return $xcodeSDK;
 }
 
 sub determineConfigurationForVisualStudio
@@ -585,9 +520,7 @@ sub XcodeOptions
     determineBaseProductDir();
     determineConfiguration();
     determineArchitecture();
-    determineXcodeSDK();
-    my @archFlags = map { ('-arch', $_) } split(/ /, $architecture);
-    return (@baseProductDirOption, "-configuration", $configuration, "-sdk", $xcodeSDK, @archFlags, argumentsForXcode());
+    return (@baseProductDirOption, "-configuration", $configuration, "ARCHS=$architecture", argumentsForXcode());
 }
 
 sub XcodeOptionString
